# RedApple

./: .bc  .gitignore  CMakeLists.txt  Doxyfile.in  ReadMe.md  build.sh  test.red
doc/: BNF.md  TODO.md  code link.mdj  redapple.mdj  与lisp的关系.md  二进制元数据规范.md  内置类型名称表  宏设计.md  库的引用.md  整体架构设计.md  新版List构建约定  构建过程描述文档.md  模块化程序设计.md  测试用动态语言设计.md  语法自扩展编译系统概要设计文档.md  语法自扩展编译系统详细设计文档.md  语言特性.md  预处理器设计.md
header_libs/elegantlist/: elegantlist.hpp  eltest.cpp
includes/: CodeGen.h  CodeGenContext.h  CodeGenFunction.h  ICodeGenContext.h  ICodeGenFunction.h  Pass.h  PassManager.h  RedCodeGen.h  idmap.h  idtable.h
includes/LLCG/: llcg.h  llcg_l.h  llvg_l.h  lvalue.h
includes/MetaModel/: FunctionModel.h  MacroModel.h  MapModel.h  MetaModel.h  StructModel.h
includes/Model/: ByteNode.h  CharNode.h  FloatNode.h  IDNode.h  IntNode.h  Node.h  StringNode.h  TypeNode.h  nodes.h
runtime/: CMakeLists.txt
runtime/src/: runtime.cpp
runtimeproj/: CMakeLists.txt
src/: CodeGen.cpp  CodeGen.h  CodeGenContext.cpp  CodeGenContext.h  CodeGenFunction.cpp  CodeGenFunction.h  MacroTranslate.cpp  MacroTranslate.h  Pass.cpp  PassManager.cpp  RedCodeGen.cpp  idmap.cpp  idmap.h  idtable.cpp  idtable.h  main.cpp  redapple_lex.cpp  redapple_lex.l  redapple_parser.cpp  redapple_parser.hpp  redapple_parser.y  symbol.h
src/LLCG/: llcg.cpp  llcg.h  lvalue.h
src/LLCG/LLVMLIB/: llcg_llvm.cpp  llcg_llvm.h  llcg_llvm_l.cpp  llvm_libs.cpp  llvm_type.cpp  llvm_type.h  llvm_value.cpp  llvm_value.h
src/Macro/: Classes.cpp  Functions.cpp  Prescan.cpp
src/MetaModel/: FunctionModel.cpp  FunctionModel.h  MacroModel.cpp  MacroModel.h  MapModel.cpp  MetaModel.cpp  MetaModel.h  StructModel.cpp  StructModel.h
src/Model/: ASTNode.cpp  ASTNode.h  BlockNode.cpp  BlockNode.h  ByteNode.cpp  ByteNode.h  CallArgsNode.cpp  CallArgsNode.h  CharNode.h  ClassDefNode.h  DelegateDefNode.cpp  DelegateDefNode.h  ExpStatementNode.cpp  ExpStatementNode.h  ExpressionNode.cpp  ExpressionNode.h  FloatNode.cpp  FloatNode.h  FuncCallNode.cpp  FuncCallNode.h  FuncDefNode.cpp  FuncDefNode.h  IDNode.cpp  IDNode.h  IntNode.cpp  IntNode.h  ModelCodeGen.cpp  ModuleDefNode.cpp  ModuleDefNode.h  Node.cpp  Node.h  StatementNode.cpp  StatementNode.h  StringNode.cpp  StringNode.h  StructModel.cpp  StructModel.h  TypeNode.cpp  ValueNode.cpp  ValueNode.h  (+3 more)
src/Model-bk/: ASTNode.cpp  ASTNode.h  BlockNode.cpp  BlockNode.h  ByteNode.h  CallArgsNode.cpp  CallArgsNode.h  CharNode.cpp  CharNode.h  ClassDefNode.cpp  ClassDefNode.h  ConstDefNode.cpp  ConstDefNode.h  ExpressionNode.cpp  ExpressionNode.h  FloatNode.cpp  FloatNode.h  FuncArgsNode.cpp  FuncArgsNode.h  FuncCallNode.cpp  FuncCallNode.h  FuncDefNode.cpp  FuncDefNode.h  IDNode.cpp  IDNode.h  IntNode.cpp  IntNode.h  StatementNode.cpp  StatementNode.h  StructDefNode.cpp  StructDefNode.h  TypeDefNode.cpp  TypeDefNode.h  ValueNode.h  VarDefNode.cpp  VarDefNode.h
src/Utils/: StringEscape.cpp  StringEscape.h  string_formatter.h
test1/: test.red  test2.red  test3.red
test1/test4/: Makefile  test4.red  test5.red
test1/test5/: Makefile  runtime.cpp  test5.red
test1/test6/: Makefile  test6.red
test1/test7/: Makefile  test7.red
test1/test8/: Makefile  declare.red  test8.red
